--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html" id="display">Home</a></li>
-                <li><a href=".services" id="display">Services</a></li>
-                <li><a href=".blog" id="display">Blog</a></li>
-                <li><a href=".about-us" id="display">About Us</a></li>
-                <li><a href=".contact" id="display">Contact US</a></li>
+                <li><a href="#services" id="display">Services</a></li>
+                <li><a href="#blog" id="display">Blog</a></li>
+                <li><a href="#about-us" id="display">About Us</a></li>
+                <li><a href="#contact" id="display">Contact US</a></li>
                 <li><a href="gallery.html" id="display">Gallery</a></li>
                 <li><a href="signin&up.html" id="different">Get started</a></li>
             </ul>
@@ -103,7 +103,7 @@
                         <img src="imgs/new/5.jpg" alt="Blog Post Image">
                         <h2>Post Title 2</h2>
                         <p>
-                            Our technical training programs are designed to enhance students' practical skills. 
+                            Our technical training programs are designed to enhance students' practical skills.
                         </p>
                         <a href="#" class="read-more">Read more</a>
                     </div>
